--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -13,7 +13,7 @@
                     <input class="hidden-div" type="text" id="author_COO" name="author_COO" value="{{ user.country }}">
                     <div class="column">
                         <li><label for="recipe_name">Recipe Name</label></li>
-                        <li><input id="recipe_name" name="recipe_name" type="text" required></li>
+                        <li><input id="recipe_name" name="recipe_name" type="text" maxlength="36" required></li>
                         <li><label for="recipe_image_url">Recipe Photo Image Address</label></li>
                         <li><input id="recipe_image_url" name="recipe_image_url" type="text" required><i class="fas fa-question-circle user-photo-instructions-btn"></i></li>
                     </div>
