--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -66,7 +66,7 @@ header {
 
 .welcome-message, .left,
 .right, .fire-text-quote, .leaderboard-intro-section, .sign-up-section,
-.log-in-section, a ~ .recipe-row-bottom, .inner-delete-recipe-row .row, .header-container {
+.log-in-section, a ~ .recipe-row-bottom, .inner-delete-recipe-row .row, .add-edit-ingredient-section, .header-container {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -528,15 +528,16 @@ nav ul li {
 
 .user-photo-instructions {
   display: none;
-  border: 9px solid #000;
   position: absolute;
-  height: 189px;
+  height: 222px;
   width: 394px;
-  right: 20vw;
+  left: 50%;
+  margin-left: -196px;
   text-align: center;
-  top: 15vh;
-  background-color: white;
-  color: black;
+  top: 50%;
+  margin-top: -147px;
+  background-color: #ff0000;
+  color: #fff;
   padding: 38px; }
 
 .user-photo-instructions-btn {
@@ -647,7 +648,7 @@ a ~ .recipe-row-bottom {
   margin-right: 18px; }
 
 .ingredient {
-  width: 23%;
+  width: 30%;
   float: left;
   padding: 8px;
   box-sizing: border-box;
@@ -658,7 +659,8 @@ a ~ .recipe-row-bottom {
   margin: 0 0 10px 0; }
 
 .ingredient p:nth-of-type(1) {
-  font-weight: 600; }
+  font-weight: 600;
+  max-width: 176px; }
 
 .ingredient-content-container button {
   font-size: 14px;
@@ -670,10 +672,47 @@ a ~ .recipe-row-bottom {
 .fa-smile {
   color: #00f500; }
 
-.ingredient button {
-  width: 100px;
-  height: 42px;
+.ingredient a {
+  display: inline-block;
   float: right; }
+
+.ingredient a i {
+  font-size: 30px;
+  color: #000; }
+
+.ingredient a i:hover {
+  color: #ff0000; }
+
+.details-container {
+  float: left; }
+
+.add-edit-ingredient-section {
+  margin-top: 65px;
+  min-height: 750px; }
+
+.add-edit-ingredient-section .container {
+  min-width: 900px; }
+
+.add-edit-ingredient-section p {
+  margin-bottom: 30px; }
+
+.add-edit-ingredient-section .container button {
+  float: left;
+  margin-left: 0; }
+
+.add-edit-ingredient-section .container label {
+  margin-right: 30px; }
+
+.text-input {
+  width: 80%; }
+
+.readonly {
+  background-color: grey;
+  color: white; }
+
+.add-edit-ingredient-section img {
+  width: 360px;
+  height: 250px; }
 
 .leaderboard-intro-bg,
 .sign-up-bg,
