--- a/templates/add_ingredient.html
+++ b/templates/add_ingredient.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} {% block content %}
+<div class="edit-add-ingredient-bg page-bg"></div>
 <div class="user-photo-instructions">
     <h3 class="photo-instructions-header">Use a personalised photo!</h3>
     <p class="photo-instructions-para">To use a photo of your choice please copy and paste the http address of your photo in the photo image address box.</p> 
