--- a/static/css/components/page-backgrounds.scss
+++ b/static/css/components/page-backgrounds.scss
@@ -2,7 +2,9 @@
 .sign-up-bg,
 .log-in-bg,
 .recipes-bg,
-.ingredients-bg {
+.ingredients-bg,
+.profile-img,
+.edit-add-ingredient-bg {
     width: 100%;
     height: 100vh;
     position: fixed;
@@ -19,7 +21,7 @@
 }
 
 .profile-img {
-    background-image: url('../images/food-board.jpg');
+    background-image: url('../images/fancycrave-458022-unsplash.jpg');
 }
 
 .recipes-bg {
@@ -46,3 +48,9 @@
 .log-in-bg {
     background-image: url('../images/simple-322427-unsplash.jpg');
 }
+
+.edit-add-ingredient-bg {
+    background-image: url('../images/adils-photography-419432-unsplash.jpg');
+}
+
+    
