--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -10,7 +10,7 @@
 
 // General styling -------------------------------------------------------------
 body {
-    font-family: 'K2D', sans-serif;
+    font-family: 'Oswald', sans-serif;
     font-weight: 500;
     letter-spacing: .5px;
 }
@@ -24,7 +24,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Mukta Malar', sans-serif;
     clear: both;
     margin: 10px 0;
 }
@@ -60,7 +60,6 @@ a:after,
 }
 
 p {
-    padding: 26px 0 0;
     letter-spacing: 2px;
     font-size: 14px;
     line-height: 20px;
