--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
         <a href=""><i class="fas fa-file-alt"></i></a>
     </div>
     <div class="right">
-        <div class="leaderboard-intro-content-container center-text">
+        <div class="leaderboard-intro-content-container">
             <h2 class="section-title uppercase">Head to our leaderboard</h2>
             <p>Okay, so you might never get on Masterchef, but you might get to the top of our leaderboard!</p>
             <p>Add those recipes, get great reviews, then check out the Head Chefs page to see if you've made it.</p>
