--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -61,14 +61,15 @@ header {
 .recipes-bg,
 .ingredients-bg,
 .profile-img,
-.edit-add-ingredient-bg {
+.edit-add-ingredient-bg,
+.add-recipe-bg {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover; }
 
 .welcome-message, .left,
 .right, .fire-text-quote, .leaderboard-intro-section, .sign-up-section,
-.log-in-section, a ~ .recipe-row-bottom, .inner-delete-recipe-row .row, .add-edit-ingredient-section, .profile-section, .header-container, .img-container {
+.log-in-section, a ~ .recipe-row-bottom, .inner-delete-recipe-row .row, .add-edit-ingredient-section, .add-a-recipe-section, .view-recipe-section .container:nth-of-type(1), .recipe-details-container .row, .profile-section, .header-container, .img-container {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -306,15 +307,18 @@ nav ul li {
   /* Fallback: assume this color ON TOP of image */
   background: url(../images/fire.jpg) no-repeat;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; }
+  -webkit-text-fill-color: transparent;
+  letter-spacing: 5px; }
 
 .welcome-message-content h1,
 .welcome-message-content h3 {
-  color: #fff;
-  letter-spacing: 5px; }
+  color: #fff; }
 
 .welcome-message-content h3 {
   font-size: 24px; }
+
+.welcome-message-content h3 ~ p:nth-of-type(1) {
+  margin: 74px 0 30px; }
 
 .welcome-message-content p {
   color: #fff;
@@ -341,6 +345,10 @@ nav ul li {
 .welcome-sentence,
 .ingredients-intro-section {
   background-color: #fff; }
+
+.recipes-intro-content h2,
+.ingredients-intro-content h2 {
+  margin: 0 0 40px; }
 
 .recipes-intro-content p,
 .ingredients-intro-section p {
@@ -423,6 +431,9 @@ nav ul li {
   max-width: 60%;
   margin: 0 auto; }
 
+.quote {
+  margin-bottom: 40px; }
+
 .fire-text-quote p {
   color: #fff;
   /* Fallback: assume this color ON TOP of image */
@@ -446,7 +457,11 @@ nav ul li {
 
 .leaderboard-intro-content-container {
   color: #fff;
-  width: 76%; }
+  width: 100%;
+  margin-left: 85px; }
+
+.leaderboard-intro-content-container p {
+  line-height: 50px; }
 
 .fa-file-alt {
   font-size: 200px;
@@ -550,7 +565,7 @@ nav ul li {
 .ingredient-content-container {
   background-color: #000;
   color: #fff;
-  padding: 8px 0;
+  padding: 32px 0 8px;
   margin: 0 auto 54px;
   position: sticky;
   top: 65px;
@@ -574,10 +589,6 @@ nav ul li {
 
 .recipe p:nth-of-type(1) {
   font-weight: 600; }
-
-.recipe-details-container {
-  padding: 5px 0 0 25px;
-  display: inline-block; }
 
 .recipe a .recipe-row-top,
 .ingredient {
@@ -686,6 +697,116 @@ a ~ .recipe-row-bottom {
   width: 360px;
   height: 250px; }
 
+.add-a-recipe-section {
+  margin-top: 65px;
+  min-height: 750px; }
+
+.add-a-recipe-section .container {
+  min-width: 900px;
+  padding: 30px;
+  background-color: #fff;
+  border-radius: 20px; }
+
+.add-a-recipe-section h1,
+.add-a-recipe-section .row {
+  margin: 20px 0; }
+
+.add-recipe-list ~ .add-recipe-button-row {
+  padding-top: 40px;
+  text-align: center; }
+
+.add-recipe-button-row button {
+  margin-left: 0; }
+
+.add-recipe-list .cusine-selection-box {
+  width: 33%; }
+
+.add-recipe-list .recipe-data-box {
+  width: 67%; }
+
+.add-recipe-list .recipe-data-box input {
+  width: 80%; }
+
+.view-recipe-section {
+  margin-top: 65px; }
+
+.view-recipe-section .container:nth-of-type(1) {
+  width: 100%;
+  max-width: none;
+  background-color: #000; }
+
+.view-recipe-section .container .image-container {
+  position: relative;
+  z-index: 1; }
+
+.view-recipe-section .container .image-container img {
+  height: 350px;
+  position: relative;
+  top: 1px; }
+
+.view-recipe-section h1 {
+  position: absolute;
+  color: white;
+  z-index: 2;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; }
+
+.recipe-details-container img {
+  height: 50px; }
+
+.recipe-details-container img,
+.recipe-details-container h2,
+.recipe-details-container p {
+  float: left;
+  display: inline-block;
+  clear: none;
+  margin: 0 20px 0 0; }
+
+.recipe-details-container p {
+  padding: 20px; }
+
+.recipe-details-container .row {
+  justify-content: unset;
+  margin: 20px 0; }
+
+.recipe-details-container .row p {
+  margin-bottom: 2px; }
+
+.recipe-instructions h2,
+.recipe-ingredients h2 {
+  float: none;
+  width: 100%;
+  margin-bottom: 20px; }
+
+.recipe-instructions p,
+.recipe-instructions th,
+.recipe-instructions td,
+.recipe-ingredients p,
+.ingredients-table-header th,
+.ingredients-table-header td,
+.inserted-ingredient-row th,
+.inserted-ingredient-row td {
+  text-align: left;
+  padding: 0;
+  margin: 0 20px 10px 0;
+  display: inline-block;
+  width: 150px; }
+
+.ingredients-table-header th,
+.ingredients-table-header td,
+.inserted-ingredient-row th,
+.inserted-ingredient-row td {
+  font-size: 14px;
+  letter-spacing: 2px; }
+
+tbody .ingredients-table-header th {
+  font-weight: 600px; }
+
+.recipe-instructions .no-details-row,
+.no-details-row {
+  width: 100%;
+  letter-spacing: 0.5px;
+  font-size: 16px; }
+
 .profile-section {
   margin-top: 65px;
   min-height: 750px; }
@@ -724,7 +845,8 @@ a ~ .recipe-row-bottom {
 .recipes-bg,
 .ingredients-bg,
 .profile-img,
-.edit-add-ingredient-bg {
+.edit-add-ingredient-bg,
+.add-recipe-bg {
   width: 100%;
   height: 100vh;
   position: fixed;
@@ -744,9 +866,6 @@ a ~ .recipe-row-bottom {
   background-image: url("../images/bobby-rodriguezz-1052701-unsplash.jpg");
   background-position: bottom; }
 
-.view-recipe-bg {
-  background-image: url("../images/food2.jpg"); }
-
 .ingredients-bg {
   background-image: url("../images/ingredients-bg.jpg"); }
 
@@ -762,8 +881,11 @@ a ~ .recipe-row-bottom {
 .edit-add-ingredient-bg {
   background-image: url("../images/adils-photography-419432-unsplash.jpg"); }
 
+.add-recipe-bg {
+  background-image: url("../images/adils-photography-419432-unsplash.jpg"); }
+
 body {
-  font-family: 'K2D', sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-weight: 500;
   letter-spacing: .5px; }
 
@@ -775,7 +897,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Mukta Malar', sans-serif;
   clear: both;
   margin: 10px 0; }
 
@@ -806,7 +928,6 @@ a:after,
   width: 100%; }
 
 p {
-  padding: 26px 0 0;
   letter-spacing: 2px;
   font-size: 14px;
   line-height: 20px; }
