--- a/templates/base.html
+++ b/templates/base.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Flame & Sizzle - {{ page_title }}</title>
     
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,700|Mukta+Malar:400,900|K2D" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,700|Mukta+Malar:400,900" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/fontawesome-free/css/all.min.css') }}" type="text/css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
     <header>
         <nav class="uppercase">
-            <a href="{{ url_for('home') }}">
+            <a href="{{ url_for('index') }}">
                 <img class="logo grow" src="{{ url_for('static', filename='images/flame-sizzle-logo.gif') }}">
             </a>
             <ul>
