--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -1,49 +1,60 @@
 {% extends 'base.html' %} {% block content %}
-<div class="page-bg view-recipe-bg"></div>
-<div class="container view-recipe-container">
-    <div class="row">
-        <h2 class="section-title flame">Recipe Details</h2>
-    </div>
-    <div class="row">
-        <div class="hidden-div">
-            <input class="hidden-div recipe-id" type="text" id="recipe-id" name="recipe-id" value="{{ this_recipe._id }}">
-        </div>
-        <section class="recipe-details-section column">
-            <div class="image-container center-text">
-                {% if this_recipe.recipe_image_url %}
-                <img class="recipe-img view-recipe-img" src="{{ this_recipe.recipe_image_url }}"></img>
-                {% else %}
-                <img class="recipe-img view-recipe-img" src="{{ url_for('static', filename='images/food-default.jpg') }}"></img>
-                {% endif %}
-            </div>
-            <div class="recipe-details-container">
-                <h3>Recipe Name</h3>
-                <p>{{ this_recipe.recipe_name }}</p>
-                <hr> 
-                <h3>Cusine Category</h3>
-                <p>{{ this_recipe.cusine }}</p>
-                <hr> 
-                <h3>Recipe Instructions</h3>
-                <p class="instructions-box">{{ this_recipe.instructions }}</p>
-            </div>
-        </section>
-        <section class="recipe-ingredients-section column">
-            <h3>Ingredients</h3>
-            <hr class="ingredients-list-hr">
-            <table class="ingredients-list-table">
-                <tr class="ingredients-table-header">
-                    <th>Ingredient</th>
-                    <th>Quantity</th>
-                </tr>
-            </table>
-        </section>
-        <div class="row">
-            <a href="{{ url_for( 'recipes', username=username) }} " class="go-back-btn div-btn center-text center-div ">
-                <span>Go back</span>
-            </a>
-        </div>
-    </div>
+<div class="hidden-div">
+    <input class="hidden-div recipe-id" type="text" id="recipe-id" name="recipe-id" value="{{ this_recipe._id }}">
 </div>
-
-
+<section class="view-recipe-section">
+    <div class="container">
+        <div class="image-container center-text">
+            {% if this_recipe.recipe_image_url %}
+            <img class="recipe-img view-recipe-img" src="{{ this_recipe.recipe_image_url }}"></img>
+            {% else %}
+            <img class="recipe-img view-recipe-img" src="{{ url_for('static', filename='images/food-default.jpg') }}"></img>
+            {% endif %}
+        </div>
+        <h1 class="section-title">{{ this_recipe.recipe_name }}</h1>
+    </div>
+    <div class="recipe-details-section container">
+        <div class="recipe-details-container">
+            <div class="row">
+                <img src="{{ author.user_photo }}"></img>
+                <h2>Posted by</h2>
+                {% if author.first_name == "TBC" %}
+                <p>{{ author.email }}</p>
+                {% else %}
+                <p>{{ author.first_name }} {{ author.surname }}</p>
+                {% endif %}
+                <h2>Cusine Category</h2>
+                <p>{{ this_recipe.cusine }}</p>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="recipe-instructions">
+                    <h2>Recipe Instructions</h2>
+                    {% if this_recipe.instructions %}
+                    <p>{{ this_recipe.instructions }}</p>
+                    {% else %}
+                    <p class="no-details-row">There are currently on instructions for this recipe. </p>
+                    {% endif %}
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="recipe-ingredients">
+                    <h2>Ingredients</h2>
+                    <table class="ingredients-list-table">
+                        <tr class="ingredients-table-header">
+                            <th>Ingredient</th>
+                            <th>Quantity</th>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="row">
+                <a href="{{ url_for( 'recipes', username=username) }} " class="go-back-btn div-btn center-text center-div ">
+                    <span>Go back</span>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
